# claude-memory

./: .gitignore  INTEGRATION.md  LICENSE  MODEL_CONFIG.md  README.md  TUTORIAL.md  pyproject.toml
claude_memory/: __init__.py
claude_memory/cli/: main.py
claude_memory/core/: engine.py  models.py  store.py
claude_memory/extractors/: llm_extractor.py
claude_memory/injectors/: prompt_injector.py
claude_memory/integrations/: acp_adapter.py
claude_memory/retrievers/: smart_retriever.py
memory_db/: chroma.sqlite3
openclaw-plugin/: bridge.py  install.sh  plugin.json
tests/: test_acp_adapter.py  test_engine.py  test_extractor.py  test_injector.py  test_integration.py  test_models.py  test_retriever.py  test_store.py
