[project]
name = "claude-memory"
version = "0.1.0"
description = "Intelligent memory layer for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "litellm>=1.0.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
